# flask-messenger

./: initDB.py  main.py  pyproject.toml  readme.md  requirements.txt  test.db
models/: __init__.py  chat.py  message.py  user.py
static/: main.css  socket.js
templates/: app.html  layout.html
