[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "extralab"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
Flask-Cors = "^3.0"
Flask-JWT = "^0.3.2"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.4"
python = "^3.8"
sqlalchemy = "^1.3"
flask-socketio = "^4.3.1"
gevent = "^20.6.2"
gevent-websocket = "^0.10.1"
[tool.poetry.dev-dependencies]
